# autodevloop

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  autodev.py  pyproject.toml  release.ps1
.github/workflows/: ci.yml
autodevloop/: __init__.py  __main__.py  brainstorm.py  cli.py  config.py  control.py  engine.py  llm.py  prompts.py  registry.py  repair.py  reporting.py  testing.py  util.py  vcs.py  webapp.py  yaml_compat.py
test1/: .autodevloop.yml
test1/docs/: brainstorm-history.md  brainstorm-spec.md
tests/: test_core.py
